# rusty-retriever

./: Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/eval/: Cargo.toml
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: lib.rs
