[workspace]
resolver = "2"
members = [
  "crates/indexer",
  "crates/retrieval",
  "crates/eval",
  "apps/cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/<you>/rusty-retriever"
rust-version = "1.74" # bump if you want newer features

[workspace.dependencies]
anyhow = "1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

clap = { version = "4", features = ["derive"] }

rayon = "1"          # parallel indexing / scoring
hashbrown = "0.14"   # fast hash maps (optional, std::collections is fine too)

unicode-normalization = "0.1"  # optional token normalization
unicode-segmentation  = "1"    # optional better token splitting
regex = "1"                    # optional tokenization

log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
