[package]
name = "rusty-retriever"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true

indexer = { path = "../../crates/indexer" }
retrieval = { path = "../../crates/retrieval" }
eval = { path = "../../crates/eval" }
